Fix bugs
- Background flickering
- Pages not showing (404) - removed .htaccess

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1330,7 +1330,8 @@ body {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     transition: all 100ms ease-out;
     cursor: pointer;
-    position: relative; }
+    position: relative;
+    backface-visibility: hidden; }
     .content .palette:hover {
       transform: scale(1.1);
       transition: all 100ms ease-in;
